--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/typeorm": "^8.1.2",
     "lint-staged": "^13.0.0",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
