--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
       "@nestjs/core": "^8.0.0",
       "@nestjs/platform-express": "^8.0.0",
       "@nestjs/typeorm": "^7.1.5",
+      "class-transformer": "^0.5.1",
+      "class-validator": "^0.13.2",
       "lint-staged": "^13.0.0",
       "mysql2": "^2.3.3",
+      "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "rimraf": "^3.0.2",
       "rxjs": "^7.2.0",
-      "typeorm": "^0.2.29",
-      "pg": "^8.4.0"
+      "typeorm": "^0.2.29"
    },
    "devDependencies": {
       "@nestjs/cli": "^8.0.0",
